# lifelab

./: README.md  README.rst  pyproject.toml
lifelab/: __init__.py  critters.py  main.py
tests/: test_lifelab.py
