[tool.poetry]
name = "lifelab"
version = "0.1.0"
description = ""
authors = ["Rob Sayers <rsayers@robsayers.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pygame = "^2.1.0"
youtube_dl = "^2021.12.17"
genpw = "^1.0.0"
opencv-python = "^4.5.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
